# SeaWeed

./: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEV_SETUP.md  README.md  macOS_setup.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-request.md  r-d-request.md  r-d.md  testing-request.md
seaweed_auxiliary/: CMakeLists.txt  package.xml  setup.cfg  setup.py
seaweed_controls/: CMakeLists.txt  package.xml  setup.cfg  setup.py  test_CAN.py
seaweed_controls/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
seaweed_controls/install/seaweed_controls/share/seaweed_controls/: package.bash  package.zsh
seaweed_controls/log/: latest_build
seaweed_controls/seaweed_controls/: can_interface.py  publisher_member_function.py  subscriber_member_function.py
seaweed_controls/seaweed_controls/install/: local_setup.sh  setup.ps1  setup.sh
seaweed_controls/seaweed_controls/log/: latest_build
seaweed_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
seaweed_core/seaweed_core/ASNE/: comm_to_rudder_controller.py
seaweed_core/seaweed_core/ASNE/rudder_controller/: rudder_controller.ino
seaweed_description/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
seaweed_description/launch/: display_rviz.launch.py
seaweed_description/rviz/: debug_dashboard.rviz  display_wamv.rviz
seaweed_description/urdf/diff_thrust_wamv/: diff_thrust_component_config.xacro  diff_thrust_component_config.yaml  diff_thrust_thruster_config.xacro  diff_thrust_thruster_config.yaml  wamv_target.urdf
seaweed_description/urdf/x_drive_wamv/: wamv_target.urdf  x_drive_component_config.xacro  x_drive_component_config.yaml  x_drive_thruster_config.xacro  x_drive_thruster_config.yaml
seaweed_interfaces/: CMakeLists.txt  package.xml
seaweed_interfaces/msg/: BoundingBox.msg  Command.msg  Detection.msg  LabeledPoseArray.msg
seaweed_localization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
seaweed_localization/config/: sim_localization_params.yaml  sim_localization_params_dlio_lidar.yaml
seaweed_localization/launch/: sim_localization.launch.py
seaweed_mapping/: CMakeLists.txt  package.xml  setup.cfg  setup.py
seaweed_mapping/include/seaweed_mapping/: euclidian_clustering_node.hpp  mapping_utils.hpp
seaweed_mapping/launch/: visualize_debug_pc.launch.py
seaweed_mapping/rviz/: vizualize_debug_pc.rviz
seaweed_mapping/seaweed_mapping/: euclidian_clustering_node.cpp  mapping_utils.cpp  occupancy_grid_manager.cpp  semantic_map_manager.cpp  test_node.cpp
seaweed_msgs/: CMakeLists.txt  package.xml
seaweed_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
seaweed_navigation/launch/: test_nav_manager.launch.py  test_nav_manager_sim.launch.py  test_pd_motion_planner.launch.py
seaweed_navigation/rviz/: map_dash.rviz
seaweed_navigation/seaweed_navigation/: a_star.py  base_grid_planner.py  navigation_manager.py  pd_motion_planner.py  pid.py  test_map_generator.py
seaweed_perception/: CMakeLists.txt  package.xml  setup.cfg  setup.py
seaweed_perception/config/: zed2i_parameters.yaml
seaweed_perception/include/seaweed_perception/: bbox_projection_node.hpp  cluster_cache_node.hpp  euclidian_clustering_node.hpp  hungarian.hpp  perception_utils.hpp  surface_scan_node.hpp
seaweed_perception/launch/: debug_cv.launch.py  debug_pc.launch.py  debug_perception.launch.py  gps_serial_driver.launch.py  test_perception_yolo.launch.py  visualize_debug_pc.launch.py  zed2i_launch.py
seaweed_perception/rviz/: debug_cv.rviz  vizualize_debug_pc.rviz
seaweed_perception/seaweed_perception/: bbox_projection_node.cpp  cluster_cache.cpp  cluster_cache_node.cpp  euclidian_clustering_node.cpp  perception_utils.cpp  projection_cache_node.cpp  rtcm_serial.py  surface_scan_node.cpp  yolo_node.py
seaweed_sim/: CMakeLists.txt  README.md  package.xml
seaweed_sim/config/: follow_path_obstacles.yaml
seaweed_sim/launch/: diff_thrust_cmdvel_sim.launch.py  diff_thrust_joy_sim.launch.py  full_sim.launch.py  gazebo.launch.py
seaweed_sim/rviz/: gazebo.rviz  gazebo_full.rviz
seaweed_sim/seaweed_sim/: diff_thrust_controller.py  joy_enum.py  obstacle_generator.py
seaweed_sim/worlds/: follow_path.sdf  sydney_regatta_empty.sdf
seaweed_utility/: package.xml  setup.cfg  setup.py
seaweed_utils/: CMakeLists.txt  package.xml
