<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>seaweed_localization</name>
  <version>0.0.0</version>
  <description>The seaweed_localization package</description>
  <maintainer email="vap77@pitt.edu">varun</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>robot_localization</depend>
  <depend>tf2_ros</depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
